--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -37,14 +37,14 @@
             <div class="sect">
                 <p>
                     <span class="prompt protocol">
-                        Case File:
+                        Case File: 
                     </span>
                     CAT1RBC5257-12052022-09012024
                 </p>
 
                 <p>
                     <span class="prompt protocol">
-                        Report Giver/Subject:
+                        Report Giver/Subject: 
                     </span>
                     Harriet Winstead
                 </p>
@@ -60,9 +60,9 @@
             <div class="sect">
                 <p>
                     <span class="prompt protocol">
-                        Report Appearances:
+                        Report Appearances: 
                     </span>
-                    ‘Arthur’, Darla Winstead
+                    <span class="ment protocol">Arthur</span>, ‘Arthur’, <span class="ment protocol">Darla Winstead</span>
                 </p>
 
                 <p>
@@ -78,18 +78,18 @@
                     Report Summary:
                 </span></p>
                 <p class="analysis">
-                    This report follows an email from Harriet (hpw332@mailpod.com) to 
-                    someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
-                    be her family member due to sharing surnames. Harriet had been speaking 
-                    with a consultant (most likely a grief consultant), whose name was never 
-                    mentioned, as she was mourning the loss of Arthur, her late partner of 
-                    20 years. The consultant told Harriet to go to Grantham Cemetery over 
-                    the phone one night; She mentions how he sounded excited in an 
-                    off-putting way on that phone call, which was unlike him. At the 
-                    cemetery, instead of the consultant, she finds ‘Arthur’; A discolored, 
-                    mismatched, undead version of Arthur. It sounded just like Arthur, and 
-                    it recognized Harriet. When asked, it responded that it was ‘some of’ 
-                    Arthur. She runs, and doesn’t get followed. Harriet asks Darla if she’s 
+                    This report follows an email from <b>Harriet</b> (<i>hpw332@mailpod.com</i>) to 
+                    someone named <b>‘Darla’</b> (<i>dwinny@mailpod.com</i>), who can be assumed to 
+                    be her family member due to them sharing surnames. Harriet had been speaking 
+                    with a consultant (most likely a <b>grief consultant</b>), whose name was never 
+                    mentioned, as she was <b>mourning the loss</b> of Arthur, her <b>late partner of 
+                    20 years.</b> The consultant told Harriet to go to <b>Grantham Cemetery</b> over 
+                    the phone one night; She mentions how he sounded <b>excited in an 
+                    off-putting way</b> on that phone call, which was unlike him. At the 
+                    cemetery, instead of the consultant, she finds ‘Arthur’; <b>A discolored, 
+                    mismatched, undead version of Arthur.</b> Despite this, it <i>sounded</i> just like Arthur, and 
+                    it <i>recognized</i> Harriet. When asked, <b>it responded that it was ‘some of’ 
+                    Arthur.</b> She runs, and doesn’t get followed. Harriet asks Darla if she’s 
                     free, as she’s afraid of staying at her home due to her newfound fear 
                     of Arthur.
                 </p>
@@ -100,12 +100,12 @@
                     Entity Influence: 
                 </span></p>
                 <p class="analysis">
-                    Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
-                    reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
-                    are within the suddenly off-putting behavior of the consultant, 
-                    ‘Arthur’s features being mismatched, mentions of his shape being ‘wrong’, 
-                    something having potentially been pressing against his skin from the 
-                    inside, and ‘Arthur’ saying “Some of him.” in response to Harriet.
+                    Primarily <b>The End;</b> seen in the <b>death, graveyard/cemetery,</b> and <b>[partial] 
+                    reanimation</b> of Arthur. <i>Potentially</i> mixed with <b>The Stranger;</b> hints of it 
+                    are within the suddenly <b>off-putting, uncanny</b> behavior of the consultant, 
+                    ‘Arthur’s features being <b>mismatched,</b> mentions of his <b>shape being ‘wrong’,</b> 
+                    something having potentially been <b>pressing against his skin from the 
+                    inside,</b> and ‘Arthur’ saying <b><i>“Some of him.”</i></b> in response to Harriet. This is high speculation.
                 </p>
             </div>
 
@@ -114,11 +114,11 @@
                     Follow-up Summary:
                 </span></p>
                 <p class="analysis">
-                    Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
+                    Sam was planning on filing it under <b>‘Zombies,’</b> to which Alice was going to 
                     let him do, as she believes nobody reads the reports they file. Gwen steps 
-                    in and suggests, instead, to file it under ‘Reanimation, partial’ and 
-                    cross-link it with ‘regret.’ She also adds that it could fall under 
-                    ‘Amalgamative, semi.’ Sam goes with Gwen’s first suggestion, which Alice 
+                    in and suggests, instead, to file it under <b>‘Reanimation, partial’</b> and 
+                    <b>cross-link</b> it with <b>‘regret.’</b> She also adds that it could fall under 
+                    <b>‘Amalgamative, semi.’</b> Sam goes with Gwen’s first suggestion, which Alice 
                     doesn’t exactly like.
                 </p>
             </div>
@@ -134,46 +134,128 @@
 
         </section>
 
-        <h3 class="protocol">The Rest</h3>
+        <h3 class="protocol">The (Second) Report</h3>
 
         <section class="info">
 
             <div class="sect">
                 <p>
                     <span class="prompt protocol">
-                        Appearances:
+                        Case File: 
                     </span>
-                    Name(s)
+                    CAT23RAB2155-10042022-09012024
                 </p>
+
                 <p>
                     <span class="prompt protocol">
-                        Locations:
+                        Report Giver/Subject: 
                     </span>
-                    Place(s)
+                    RedCanary
                 </p>
+
                 <p>
                     <span class="prompt protocol">
-                        Artifacts:
+                        Report Reader: 
                     </span>
-                    Artifact(s)
+                    CHESTER
+                </p>
+            </div>
+
+            <div class="sect">
+                <p>
+                    <span class="prompt protocol">
+                        Report Appearances: 
+                    </span>
+                    ArcherK, BadGrav31, Devan, FlowersUnderground
+                </p>
+
+                <p>
+                    <span class="prompt protocol">
+                        Report Locations: 
+                    </span>
+                    forums.lostcityurbex.com, <span class="ment protocol">The Magnus Institute <i>(Ruins)</i></span>
+                </p>
+
+                <p>
+                    <span class="prompt protocol">
+                        Report Artifacts: 
+                    </span>
+                    <span class="sus protocol">Old wooden box with strange symbols</span>
                 </p>
             </div>
 
             <div class="sect">
                 <p><span class="prompt protocol">
-                    Events Summarized:
+                    Report Summary:
                 </span></p>
                 <p class="analysis">
-                    Summarize report-unrelated events.
+                    This one follows an online forum (<i>forums.lostcityurbex.com</i>) 
+                    for spelunking and old sites. A user going by <b>RedCanary</b> started a new topic on 
+                    <b>The Magnus Institute ruins,</b> asking about its status; It’s said to be <i>fully 
+                    explored,</i> however there’s <i>no online information on the site,</i> thus 
+                    RedCanary wants to know if exploring it is worth it. Another user, BadGrav31, says to go for it, 
+                    as the lack of information online is good enough reason to check it out oneself. 
+                    A moderator for the forum, ArcherK, says it was on the ‘cleared’ list as that’s what 
+                    one of Devan's (<i>whom I assume is a 
+                    former forum admin/mod</i>) old lists had it placed under; <b>ArcherK assumes this was a 
+                    mistake on Devan’s part.</b> RedCanary decides they’ll check it out, and they’ll report 
+                    their findings on their return.
+                </p>
+                <p class="analysis">
+                    Once they return from their exploration, RedCanary makes a post where they say it’s 
+                    <b>definitely 
+                    not cleared</b> and that they’ll make their full report the following day. 
+                    A user named FlowersUnderground joins the topic thread,
+                    <b>asking about pictures of the ruins,</b> to which RedCanary says <b>they’re having trouble 
+                    with uploading the 
+                    files due to photographic distortion.</b> They also mention their <b>increasing paranoia.</b>
+                </p>
+                <p class="analysis">
+                    They detail some of their findings, one of which being some <b>odd graffiti,</b> 
+                    most being <b>strange symbols;</b> RedCanary mentions the symbols potentially 
+                    being <b>of the occult.</b> BadGrav31 expresses curiosity about these graffiti, 
+                    and asks if it’s possible to get pictures. RedCanary responds that the photos from 
+                    their exploration are more than likely gone, due to the corrupted files; they then 
+                    mention <b>a strange, wooden box, they found, as well.</b> The box contains some of 
+                    the aforementioned symbols; Though, they couldn’t post images of this as well, <b>due 
+                    to the same photographic distortion issues.</b> <b><i>They once again mention their 
+                    increasing paranoia.</i></b> ArcherK says to RedCanary that the forum <b>does not 
+                    endorse theft from exploration sites,</b> and that RedCanary better not be 
+                    admitting to taking souvenirs. RedCanary lashes out, saying they don’t 
+                    need anonymous DMs, <b>which ArcherK explicitly mentions the forum doesn’t allow,</b> 
+                    calling them a thief; They also threaten that they know how to dox people, 
+                    too, if needed. <b>This sudden aggression is likely attributed to RedCanary’s 
+                    growing paranoia</b> — this outburst does, however, lead to RedCanary getting 
+                    a <b>formal warning</b> for breaking the rules.
+                </p>
+                <p class="analysis">
+                    A week later, BadGrav31 posts in the forum topic that they’re still waiting 
+                    on the graffiti pictures if they’re retrievable. There’s a post from RedCanary 
+                    with a now-removed image of somebody's eyes, <i>potentially after being gouged out,</i> 
+                    with the caption: <b>“Canaries should stay above ground.”</b>
                 </p>
             </div>
 
             <div class="sect">
                 <p><span class="prompt protocol">
-                        Entity Influences:
+                    Entity Influence: 
                 </span></p>
                 <p class="analysis">
-                    Enter findings.
+                    Primarily, and seemingly only, <b>The Eye;</b>The main focus of the 
+                    episode, <b>The Magnus Institute,</b> itself 
+                    having been built in reverence to Beholding, RedCanary’s <b>constant paranoia</b> 
+                    after the excursion, RedCanary <b>pursuing the knowledge to their [implied] demise.</b> 
+                </p>
+            </div>
+
+            <div class="sect">
+                <p><span class="prompt protocol">
+                    Follow-up Summary:
+                </span></p>
+                <p class="analysis">
+                    Sam asks Gwen <b>if she’s ever heard of The Magnus Institute,</b> 
+                    to which she says no, and asks him why he wants to know. 
+                    He says it’s nothing, and that it’s <b>simply a blast from the past.</b>
                 </p>
             </div>
 
@@ -182,16 +264,88 @@
                     Of Significance:
                 </span></p>
                 <p class="analysis">
-                    Episode report-unrelated events of significance.
+                    The first look into <i>The Magnus Protocol’s</i> <b>Magnus Institute,</b> 
+                    which is known to have <b>burned down in 1999.</b> There’s not much else 
+                    known of it as of yet, aside from the descriptions RedCanary gave, 
+                    as well as the things revealed within the ARG.
+                </p>
+                <p class="analysis">
+                    <b>RedCanary</b> is likely a reference to <b>canaries in coal mines;</b> you send 
+                    them in before going into a cave to mine, <b>knowing not to go in due to CO2 poisoning 
+                    if the canary <i>does not fly out of the cave</i> or <i>dies soon after flying out.</i></b> 
+                    They are an <b>explicit warning</b> to Sam, warning him not to look further 
+                    into the Institute. He, of course, will not listen to this warning.
                 </p>
             </div>
 
         </section>
 
+        <h3 class="protocol">The Rest</h3>
+
+        <section class="info">
+
+            <div class="sect">
+                <p>
+                    <span class="prompt protocol">
+                        Appearances: 
+                    </span>
+                    Alice Dyer, Colin, Gwendolyn Bouchard, Lena, Samama Khalid, Teddy
+                </p>
+                <p>
+                    <span class="prompt protocol">
+                        Locations: 
+                    </span>
+                    O.I.A.R. office, a pub
+                </p>
+            </div>
+
+            <div class="sect">
+                <p><span class="prompt protocol">
+                    Events Summarized: 
+                </span></p>
+                <p class="analysis">
+                    It starts with Teddy’s leaving party, as he’s going to work 
+                    in the insurance field. Aside from this, it’s a simple introduction 
+                    to the characters we’ll be most acquainted with at the shows’ 
+                    beginning stages. Gwen disrespects Lena (<i>their manager</i>) in front 
+                    of her coworkers; The others mention having an afterparty at the pub, 
+                    to which Lena reluctantly allows them to do, but does not join. 
+                    The old computers are the source of how we listen into the happenings 
+                    of this world, which is shown with the scene ending once Teddy shut 
+                    down his work station that had booted up on its own; Though this is 
+                    not always the case, as sometimes we listen from someone else’s phone.
+                </p>
+                <p class="analysis">
+                    The next day starts with Alice training Sam on how the job works. 
+                    She introduces him to Freddy (<i>FR3–d1</i>), the software their system is 
+                    based upon, running on a business-focused predecessor to Windows 95 
+                    (<i>Windows NT 4.0</i>). She goes into the first case file, which is an email, 
+                    much like CAT1RBC5257-12052022-09012024, though with different contents. 
+                    This one was filed as CAT2RC1157-12052022-09012024, which was filed under 
+                    Dolls, watching”. She says Sam can try filing the next case on his own, 
+                     is the aforementioned CAT1RBC5257-12052022-09012024, that NORRIS reads out. 
+                     Gwen gets called into Lena’s office for the sole purpose of being scolded 
+                     for disrespecting Lena in front of the others, especially the new hire (<i>Sam</i>) 
+                     during Teddy’s leaving party, amongst other unimportant details.
+                </p>
+                <p class="analysis">
+                    Colin and Sam talk for the first time, where Alice set Sam up to 
+                    be yelled at by Colin. Sam apologizes profusely. Back at their 
+                    workstations, Gwen and Sam talk a bit before being interrupted by 
+                    CHESTER with case CAT23RAB2155-10042022-09012024, about the Institute. 
+                    After the things covered in the section for that report, Gwen complains at 
+                    Alice’s need to name the voices. Alice offers to take Sam out to the pub, 
+                    already worried for how he’s taking the reports in, where they reminisce over 
+                    the past and Sam thanks Alice for her help getting him this job.
+                </p>
+            </div>
+        </section>
+
         <section>
 
             <h6 class="protocol">
-                ❝Episode quote.❞
+                ❝ It frightens me now. I look at the shadows, not the lights.<br>
+                They hide whatever it was that took him away from me. ❞
             </h6>
 
         </section>
